.infrastructure/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoapp-ingress
  namespace: todoapp
  annotations:
   # Important for handling the path regex correctly
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /(.*) # Captures the path as requested
        pathType: Prefix
        backend:
          service:
            name: todoapp-service # Назва сервісу clusterIp
            port:
              number: 80 # Порт з поля 'port' clusterIp сервісу
